[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "castor-etc"
dynamic = ["version"]
description = "CASTOR Exposure Time Calculator (ETC)"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.9"
authors = [
    { name = "FORECASTOR Team" },
]
dependencies = [
    "arviz",
    "astropy",
    "astroquery",
    "celerite",
    "corner",
    "emcee",
    "matplotlib",
    "numpy",
    "pandas",
    "photutils",
    "pytransit",
    "scikit-image",
    "scipy",
    "spectres",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/CASTOR-telescope/ETC"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
lint = [
    "black",
    "ruff",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autoapi",
]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=castor_etc --cov-report term-missing"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/castor_etc",
]

[tool.hatch.build.targets.wheel]
packages = ["/castor_etc"]

[tool.hatch.envs.build]
dependencies = [
    "isort"
]

[tool.hatch.envs.docs]
python = ["3.11", "3.12"]
dependencies = [
    "sphinx",
    "-r docs/requirements.txt"
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs/source docs/build"
serve = "sphinx-build -b html docs/source docs/build --open-in-browser"

[dependency-groups]
dev = [
    "pytest>=8.4.2"
    "pytest-cov>=7.0.0",
]
