[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "castor-etc"
dynamic = ["version"]
description = "CASTOR Exposure Time Calculator (ETC)"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "FORECASTOR Team" },
]
dependencies = [
    "arviz",
    "astropy",
    "astroquery",
    "celerite",
    "corner",
    "emcee",
    "matplotlib",
    "numpy",
    "pandas",
    "photutils",
    "pytransit",
    "scikit-image",
    "scipy",
    "spectres",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/CASTOR-telescope/ETC"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
lint = [
    "black",
    "ruff",
    "mypy",
    "isort",
]
docs = [
    "sphinx",
    "myst-nb",
    "sphinx-book-theme",
    "sphinxcontrib-napoleon",
    "sphinx-autodoc2",
    "sphinx-autobuild",
    "mathjax",
    "sphinx_rtd_theme",
]
dev = [
    "pipdeptree",
    "pre-commit", 
    "ipython",
    "build",
    "pip-audit",
]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=castor_etc --cov-report term-missing"

[tool.coverage.run]
relative_files = true
source = ["castor_etc"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/castor_etc",
]

[tool.hatch.build.targets.wheel]
packages = ["/castor_etc"]

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
installer = "uv"

[tool.hatch.envs.lint]
dependencies = [
    "black",
    "ruff",
    "mypy",
    "isort",
]
installer = "uv"

[tool.hatch.envs.docs]
dependencies = [
    "sphinx",
    "myst-nb",
    "sphinx-book-theme",
    "sphinxcontrib-napoleon",
    "sphinx-autodoc2",
    "sphinx-autobuild",
    "mathjax",
    "sphinx_rtd_theme",
]
installer = "uv"

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs/source docs/build"
serve = "sphinx-build -b html docs/source docs/build --open-in-browser"

[tool.hatch.envs.dev]
dependencies = [
    "pipdeptree",
    "pre-commit",
    "ipython",
    "build",
    "pip-audit",
]
installer = "uv"